Solucionados errores en persistencia, y en spring-security. Añadidos pagina de login y de registro